Move stuff around to more sane locations
o Remove amount of config needed in build.sbt
o Move publishing stuff to separate publish.sbt
o Move source to default positions
o 2.11 build